password hashing, jwt login and register completed
