# src/models/User.ts
@@ -4,10 +4,17 @@ import {
   Column,
   CreateDateColumn,
   UpdateDateColumn,
+  BaseEntity,
 } from "typeorm";
 
+export enum UserRole {
+  SUPER_ADMIN = "SUPER_ADMIN",
+  CREATOR = "CREATOR",
+  DONATOR = "DONATOR",
+}
+
 @Entity()
-export class User {
+export class User extends BaseEntity {
   @PrimaryGeneratedColumn()
   id!: number;
 
@@ -19,6 +26,14 @@ export class User {
 
   @Column()
   email!: string;
+
+  @Column()
+  password!: string;
+
+  // @Column({ type: "enum", enum: UserRole, default: UserRole.DONATOR })
+  // role!: UserRole;
+  @Column({ default: "DONATOR" })
+  role!: string;
 
   @CreateDateColumn()
   createdAt!: Date;
